--- a/zombieFace.css
+++ b/zombieFace.css
@@ -3,6 +3,28 @@ body {
 background-color: black;
 }
 
+
+@font-face {
+    font-family: 'destroyregular';
+    src: url('DESTROY_-webfont.eot');
+    src: url('DESTROY_-webfont.eot?#iefix') format('embedded-opentype'),
+         url('DESTROY_-webfont.woff') format('woff'),
+         url('DESTROY_-webfont.ttf') format('truetype'),
+         url('DESTROY_-webfont.svg#destroyregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+   /* margin: 0;
+    padding: 0;*/
+
+}
+
+
+*{
+  font-family: 'destroyregular';
+}
+
+
+
 #wrapper {
     width: 1100px;
     height: 600px;
@@ -27,6 +49,8 @@ background-color: black;
   height: 100px;
   text-align: center;
   background-color: gray;
+  margin: 0;
+  padding: 0;
 
   /*align-content: center;*/
 
@@ -40,7 +64,7 @@ background-color: black;
   border-radius: 20px;
   float: right;
   left: 28px;
-  bottom: 2%;
+  top: -94px;
   position: relative;;
 
 
@@ -110,7 +134,7 @@ background-color: black;
 #gameMsg p{
   text-align: center;
   vertical-align: middle;
-  font-size: 30px; !important
+  font-size: 25px;
   margin-left: auto;
   margin-right: auto;
   /*margin-bottom: 20px;*/
@@ -125,7 +149,7 @@ background-color: black;
 
 }
 #playerUp p{
-font-size: 30px; !important
+font-size: 15px; !important
 vertical-align: middle;
 line-height: 1px;
 }
@@ -195,7 +219,11 @@ div #a6 {top: 78%; position: relative;}
 div #a7 {top: 15%; position: relative;}
 div #a8 {top: 40%; position: relative;}
 div #a9 {top: 57%; position: relative;}
-div #a10 {top: 62%; position: relative;}
+
+div #a10 {
+        top: 62%; position: relative;
+         left: -28px;
+       }
 
 
 /*----------------Below is test css markUP----------------------*/
