--- a/css/zombieFace.css
+++ b/css/zombieFace.css
@@ -157,6 +157,14 @@ line-height: 1px;
 
 /*--------------------------------------*/
 
+#gameTitle {
+    color: green;
+    position: relative;
+    left: 300px;
+    top: 30%;
+    font-size: 40px;
+}
+
 .cover {
   width: 825px;
   height: 574px;
@@ -165,7 +173,7 @@ line-height: 1px;
   float: left;
   z-index: 1;
   position: absolute;
-}
+ }
 
 #mainScreen {
   width: 1100px;
