--- a/css/zombieFace.css
+++ b/css/zombieFace.css
@@ -288,6 +288,20 @@ button {
 
 }
 
+.reStartButton{
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    display: block;
+    color: black;
+    
+   /* padding: 10px 20px;
+    position: absolute;
+    right: 10px;
+    top: 37px*/
+
+}
+
 .rsMenu{
   border: 1px solid black;
   border-radius: 20px;
